; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_lex_accept.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_lex_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lexbuf*, i32)* @css_lex_accept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @css_lex_accept(%struct.lexbuf* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.lexbuf*, align 8
  %5 = alloca i32, align 4
  store %struct.lexbuf* %0, %struct.lexbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.lexbuf*, %struct.lexbuf** %4, align 8
  %7 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.lexbuf*, %struct.lexbuf** %4, align 8
  %13 = call i32 @css_lex_next(%struct.lexbuf* %12)
  store i32 1, i32* %3, align 4
  br label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @css_lex_next(%struct.lexbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
